styles.css
/* global */
:root {
  --color-lightest: #ffffff;
  --color-active: #f06c64;
  --color-headers: #666d89;
  --color-main: #767e9e;
  --color-form: #f48c8f;
  --color-quote: #f0d8d9;
  --color-bg-header-footer: #2d303a;
  --transition: .3s ease-out;
  --brightness: brightness(180%);
}

html {
  font-family: 'Lato', Verdana, sans-serif;
  font-size: 10px;
}

h1,
h2,
h3 {
  padding: 0;
  margin: 0;
}

a {
  text-decoration: none;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;

  overflow: hidden;

  clip: rect(1px, 1px, 1px, 1px);
  border: 0;
}

/* hacks */
.left_padding_fix_1px {
  padding-left: 1px;
}

.left_padding_fix_2px {
  padding-left: 2px;
}

.top_padding_fix_1px {
  padding-top: 1px;
}

/* typo */
.typo_size_xxl {
  font-size: 3.0rem;
  line-height: 1;
}

.typo_size_md {
  font-size: 1.8rem;
  line-height: 1;
}

.typo_size_sm {
  font-size: 1.2rem;
  line-height: 1;
}

.typo_color_active {
  color: var(--color-active);
}

.typo_color_light {
  color: var(--color-lightest);
}

.typo_color_main {
  color: var(--color-main);
}

.typo_color_headers {
  color: var(--color-headers);
}

.typo_color_quote {
  color: var(--color-quote);
}

.typo_color_form {
  color: var(--color-form);
}

.typo_weight_300 {
  font-weight: 300;
}

.typo_weight_400 {
  font-weight: 400;
}

.typo_weight_700 {
  font-weight: 700;
}

.typo_weight_900 {
  font-weight: 900;
}

/* main part */
.content {
  box-sizing: border-box;
  max-width: 1020px;
  margin: 0 auto;
}

.header,
.portfolio {
  border-bottom: 6px solid #323746;
  background-color: var(--color-bg-header-footer);
}

.header__content {
  padding: 31px 40px 33px 40px;
  display: flex;

  justify-content: space-between;
  align-items: center;
}

.slider,
.contact-us {
  border-bottom: 6px solid #ea676b;
  background-color: var(--color-active);
}

.slider__content {
  padding: 53px 39px 56px 42px;
  display: flex;

  justify-content: space-between;
  align-items: center;
}

.services,
.about-us {
  border-bottom: 6px solid var(--color-lightest);
  background-color: #f2f2f2;
}

.services__content {
  padding: 62px 40px 30px 40px;
}

.navigation {
  margin: 0;
  padding-top: 12px;
  display: flex;

  list-style-type: none;
}

.navigation__item {
  margin-left: 31px;
  position: relative;
  letter-spacing: -0.33px;

  text-transform: uppercase;
}

.navigation__item:not(:last-child)::after {
  display: block;
  position: absolute;
  right: -17px;
  top: -1px;

  content: '\00b7';
  color: #494e62;
}

.navigation__link:hover {
  color: var(--color-active);

  transition: var(--transition);
}

.logo {
  font-size: 2.5rem;
  font-weight: 700;
  letter-spacing: -0.5px;
  line-height: 1;
  color: var(--color-lightest);
  text-transform: uppercase;
}

.logo:after {
  content: '*';
  color: var(--color-active);
}

.slider__navigation-image-left {
  background: url('assets/img/slider_left.png') no-repeat top left;
  display: inline-block;
  height: 27px;
  width: 16px;
}

.slider__navigation-image-right {
  background: url('assets/img/slider_right.png') no-repeat top left;
  display: inline-block;
  height: 27px;
  width: 16px;
}

.slider__navigation-image-left:hover,
.slider__navigation-image-right:hover {
  filter: brightness(80%);
  transition: var(--transition);
}

.slider__vertical-frame {
  position: relative;
  margin-right: 18px;
}

.slider__horizontal-frame {
  position: relative;
}

.slider__phone-shadow-vert {
  margin-left: -1px;
}

.slider__phone-base-vert {
  position: absolute;
  left: -1px;
  top: 0;

  z-index: 1;
}

.slider__phone-screen-vert {
  position: absolute;
  left: -1px;
  top: -70px;

  z-index: 2;

  clip: rect(135px, 202px, 468px, 14px);
}

.slider__phone-shadow-hor {
  margin-top: -1px;
}

.slider__phone-base-hor {
  position: absolute;
  left: -1px;
  top: -1px;

  z-index: 1;
}

.slider__phone-screen-hor {
  position: absolute;
  left: -66px;
  top: -106px;

  z-index: 2;

  clip: rect(119px, 458px, 307px, 125px);
}

.services__header {
  letter-spacing: -0.14px;
}

.services__text {
  margin-top: 21px;
  margin-bottom: 21px;

  line-height: 3.0rem;
  text-align: justify;
}

.cards {
  padding-top: 24px;
  display: flex;

  flex-wrap: wrap;
  justify-content: space-between;
}

.cards__card {
  box-sizing: border-box;
  padding-bottom: 19px;
  padding-left: 80px;
  display: flex;
  flex-direction: column;
  width: 32%;
  min-width: 300px;
  position: relative;
  overflow: hidden;

  line-height: 2.1rem;
  letter-spacing: -0.1px;
}

.cards__card-image {
  padding-top: 1px;
  padding-right: 18px;
  position: absolute;
  left: 0;
  top: 0;
}

.cards__card-text {
  margin: 10px 0 13px 1px;
  height: 6.3rem;

  line-height: 2.1rem;
  text-align: justify;
}

.portfolio__content {
  padding: 62px 40px 66px 40px;
}

.portfolio__header {
  letter-spacing: -0.14px;
}

.portfolio__text {
  margin-top: 21px;
  margin-bottom: 11px;

  line-height: 3.0rem;
  text-align: justify;
}

.tags {
  margin: 0;
  padding: 0 0 19px 0;
  display: flex;

  list-style-type: none;
}

.tags__link {
  padding: 4px 6px;
  margin-right: 10px;
  position: relative;
  display: inline-block;

  color: var(--color-main);

  border: 1px solid var(--color-headers);
  border-radius: 5px;
}

.tags__link-first {
  padding-left: 7px;
  margin-left: 1px;
}

.tags__link-third {
  padding-right: 5px;
}

.tags__link-fourth {
  padding-right: 5px;
}

.tags__link:hover {
  cursor: pointer;
  background-color: #c5c5c5;
  transition: var(--transition);
}

.tags__link-active {
  color: #dedede;
  border-color: #c5c5c5;
}

.works {
  padding: 0;
  margin: 0;
  height: 602px;

  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  overflow: hidden;

  list-style-type: none;
}

.works__work {
  padding-bottom: 18px;
}

.works__work:hover > img {
  cursor: pointer;
  transition: var(--transition);
  filter: brightness(115%);
}

.about-us__content {
  padding: 62px 39px 26px 40px;
}

/* FF fix*/
@-moz-document url-prefix() {
  .about-us__content {
    padding-bottom: 27px;
  }
}

.about-us__header {
  letter-spacing: -0.14px;
}

.about-us__text {
  margin-top: 21px;
  margin-bottom: 21px;

  line-height: 3.0rem;
  text-align: justify;
}

.team {
  padding-top: 24px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  height: 100%;
}

.team__member {
  padding-bottom: 34px;
  width: 32%;
  min-width: 300px;
  display: flex;
  flex-direction: column;

  line-height: 2.1rem;
  letter-spacing: -0.1px;
}

.team__member-name {
  padding-top: 17px;
  padding-bottom: 10px;
  margin-left: -0.5px;
  width: 300px;

  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.team__member-description {
  margin: 0 0 0 -2px;
  padding: 0 0 24px 2px;

  text-align: justify;
  line-height: 2.1rem;
}

.social {
  margin: 0;
  padding: 0;
  display: flex;

  list-style-type: none;
}

.social__link {
  padding-left: 1px;
  padding-right: 7px;
}

.social__link:hover {
  filter: brightness(180%);
  transition: var(--transition);
}

.contact-us__content {
  padding: 62px 40px 17px 40px;
}

.contact-us__header {
  letter-spacing: -0.14px;
}

.contact-us__text {
  margin-top: 21px;
  margin-bottom: 44px;

  line-height: 3.0rem;
  text-align: justify;
}

.contact-us__container {
  display: inline-flex;

  justify-content: space-between;
}

.quote {
  padding-right: 20px;
  display: flex;

  flex-direction: column;
  flex-basis: 65.9%;
  flex-shrink: 0;
}

.quote__input,
.quote__textarea,
.quote__submit {
  box-sizing: border-box;

  background-color: #d6564f;
  border: none;
  border-radius: 5px;
  outline: none;

  color: var(--color-lightest);

  transition: box-shadow var(--transition);
}

.quote__input {
  margin-bottom: 16px;
  padding: 18px 15px 20px 15px;
  height: 3rem;
}

.quote__textarea {
  margin-bottom: 15px;
  padding: 11px 15px;
  height: 20.2rem;

  resize: none;
}

.quote__submit {
  height: 3.5rem;
  width: 10rem;

  color: var(--color-quote);
}

.quote__input::placeholder,
.quote__textarea::placeholder {
  color: var(--color-form);
  opacity: 1; /*FF compatibility*/
}

/*Edge support*/
.quote__input::-ms-input-placeholder,
.quote__textarea::-ms-input-placeholder {
  color: var(--color-form);
}

.quote__input:hover,
.quote__textarea:hover,
.quote__submit:hover,
.quote__input:focus,
.quote__textarea:focus,
.quote__submit:focus {
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, .3);
}

.quote__input:required:invalid:focus {
  background-image: url("assets/img/invalid.png");
  background-position: right center;
  background-repeat: no-repeat;
  -moz-box-shadow: none;
}

.quote__input:required:valid:focus {
  background-image: url("assets/img/valid.png");
  background-position: right center;
  background-repeat: no-repeat;
}

.quote__submit:hover {
  cursor: pointer;
}

.contacts {
  margin: 0;
  padding: 0 0 0 1px;

  list-style-type: none;
}

.contact-info__header {
  padding-left: 1px;
  padding-bottom: 10px;

  letter-spacing: -0.15px;
}

.contact-info__text {
  margin: 1px 0 24px 0;
  line-height: 2.1rem;

  letter-spacing: -0.04px;
  text-align: justify;
}

.contacts__contact-link {
  vertical-align: super;
}

.contacts__contact-location:before {
  background-image: url(assets/img/location.png);
}

.contacts__contact-tel:before {
  background-image: url(assets/img/tel.png);
}

.contacts__contact-email:before {
  background-image: url(assets/img/email.png);
}

.contacts__contact-location:before,
.contacts__contact-tel:before,
.contacts__contact-email:before {
  content: "";
  display: block;
  width: 13px;
  height: 14px;
  position: absolute;
  left: 0;
  top: 0;

  background-position: center center;
  background-repeat: no-repeat;
}

.contacts__contact-link:hover {
  line-height: 1.5;
  color: var(--color-lightest);
  transition: var(--transition);
}

.contacts__contact-link:hover > .contacts__contact-location:before,
.contacts__contact-link:hover > .contacts__contact-tel:before,
.contacts__contact-link:hover > .contacts__contact-email:before {
  filter: var(--brightness);
  transition: var(--transition);
}

.contacts__contact-location,
.contacts__contact-tel,
.contacts__contact-email {
  padding-left: 22px;
  position: relative;

  line-height: 1.7;
}

.footer {
  background-color: var(--color-bg-header-footer);
}

.footer__content {
  padding: 22px 33px 20px 42px;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer__copyright {
  margin-top: -3px;

  letter-spacing: -0.1px;
}

